an abundance of error reporting